syntax = "proto3";

option go_package = "pkg/api";

service VotingService {
  rpc CreateVoteable(CreateVoteableRequest) returns (CreateVoteableResponse) {}
  rpc ListVoteables(ListVoteableRequest) returns (ListVoteablesResponse) {}
  rpc CastVote(CastVoteRequest) returns (CastVoteResponse) {}
}

message Voteable {
  string uuid = 1;
  string question = 2;
  repeated string answers = 3;
}

message CreateVoteableRequest {
  string question = 1;
  repeated string answers = 2;
}

message CreateVoteableResponse {
  string uuid = 1;
}

message ListVoteableRequest {
  int32 page_number = 1;
  int32 result_per_page = 2;
}

message ListVoteablesResponse {
  repeated Voteable votables = 1;
}

message CastVoteRequest {
  string uuid = 1;
  int64 answer_index = 2;
}

message CastVoteResponse { }
